<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/oldTestamentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_testament_button" />

    <Button
        android:id="@+id/newTestamentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_testament_button" />

    <Button
        android:id="@+id/specialVersesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_verser_button" />

    <Button
        android:id="@+id/bookmarksButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmarks_button" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button" />

</LinearLayout>
